--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,19 +1,4 @@
-@keyframes scrollText {
-  0% {
-    transform: translateX(100%);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
-}
-
-.scrolling-text {
-  white-space: nowrap;
-  display: inline-block;
-  animation: scrollText 10s linear infinite;
-}
-
-.scrolling-container {
-  overflow: hidden;
-  width: 100%;
+.swiper-slide {
+  display: flex;
+  justify-content: center;
 }
