--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,8 +7,8 @@ const navItems = [
   { href: '/contact', label: 'Contact' },
 ];
 ---
-<header class="fixed w-full bg-white dark:bg-gray-900 shadow-lg z-50">
-    <div class="container mx-auto px-4 py-4 flex items-center justify-between">
+<header class="fixed w-full bg-white/80 dark:bg-gray-900 backdrop-blur-lg  shadow-lg z-50">
+<div class="container mx-auto px-4 py-4 flex items-center justify-between">
       <div class="flex-1">
         <a href="/" class="text-2xl font-bold text-blue-400">veb<span class="dark:text-white text-black">Labs</span></a>
       </div>
