--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,3 +2,16 @@
   display: flex;
   justify-content: center;
 }
+
+.tab-link.active {
+  background-color: #1d4ed8; /* Active tab blue */
+  color: white;
+}
+
+.tab-content {
+  transition: opacity 0.3s ease-in-out;
+}
+
+.tab-content.hidden {
+  display: none;
+}
